Bug squishes

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ main {
     justify-content: space-around;
     cursor: pointer;
     transition: 0.5s;
+    margin: 2vh;
 }
 .head h1 {
     cursor: pointer;
@@ -73,6 +74,10 @@ main {
     z-index: -4;
 }
 .move {
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -127,6 +132,10 @@ main {
 
 }
 .rotate {
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -196,8 +205,8 @@ main {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: lightcoral;
     display: flex;
     flex-direction: column;
